# bitcoin-wallet

./: .env  Cargo.toml
app/: Cargo.toml
app/src/: main.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/db/: Cargo.toml
crates/db/migrations/: 20251031205932_users_up.sql
crates/db/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
