
[workspace]
members = [
    "app",             
    "crates/api",      
    "crates/db",       
    "crates/models",   

]
resolver = "3"

[workspace.dependencies]
alloy = { version = "1.0", features = ["full"] }
alloy-sol-types = "1.0"
alloy-contract = "1.0"  
alloy-dyn-abi = "1.0"   
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
eyre = "0.6"
dotenv = "0.15"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.17"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"